# QLundLite

./: .gitignore  Make_data_SRJ.py  README.md  environment.yml  make_scores_combiner_SRJ.py  metadata.json  preprocess_SRJ_CPU.py  pyproject.toml  requirements.txt  test_make_scores_SRJ.py  weight_ONLY_TRAINS_COMBINER_SRJ.py  weight_ONLY_TRAINS_SRJ.py
configs/: config_ONLY_TRAIN_COMBINER_SRJ.yaml  config_ONLY_TRAIN_SRJ.yaml  config_make_data_SRJ.yaml  config_make_scores_SRJ.yaml  config_make_scores_combiner_SRJ.yaml  config_preprocess_SRJ.yaml  config_signal_SRJ.yaml
notebooks/: plot_SRJ_scores.ipynb
plotting/: utils_plots_matplotlib.py
tools/: utils_config.py
tools/GNN_model_weight/: models.py  quantum_layers.py  utils_newdata.py
