[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srj-training"
version = "0.1.0"
description = "LundNet GNN tagger for Small Radius Jets (SRJ)"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "torch-geometric>=2.4",
    "uproot>=5.0",
    "awkward>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "tqdm>=4.65",
    "networkx>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
quantum = ["pennylane>=0.35"]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "plotting*"]
